--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,6 @@ django-allauth==0.45.0
 django-crispy-forms==1.13.0
 idna==3.2
 oauthlib==3.1.1
-psycopg2==2.9.1
 pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.1.0
@@ -26,3 +25,5 @@ static3==0.7.0
 toml==0.10.2
 typing-extensions==3.10.0.2
 urllib3==1.26.7
+gunicorn==20.1.0
+psycopg2==2.9.1
